添加标题栏

--- a/index.html
+++ b/index.html
@@ -16,8 +16,26 @@
     <div class="theme-aproch-flat-dark fill-w fill-h">
         <div id="aproch-app-view" class="aproch-app-view">
             <!-- 标题 -->
-            <div class="aproch-header mono-flat-panel">
-                <div class="aproch-caption">APROCH</div>
+            <div class="aproch-titlebar mono-flat-panel">
+                <div class="titlebar-drag-region"></div>
+                <div class="menubar">
+                    <div class="menubar-menu-button" aria-label="文件" aria-haspopup="true" aria-keyshortcuts="Alt+f">
+                        <div class="menubar-menu-title" role="none" aria-hidden="true">文件(<mnemonic aria-hidden="true">F
+                            </mnemonic>)
+                        </div>
+                    </div>
+                    <div class="menubar-menu-button" aria-label="编辑" aria-haspopup="true" aria-keyshortcuts="Alt+e">
+                        <div class="menubar-menu-title" role="none" aria-hidden="true">编辑(<mnemonic aria-hidden="true">E
+                            </mnemonic>)
+                        </div>
+                    </div>
+                </div>
+                <div class="window-title">APROCH</div>
+                <div class="window-controls-container">
+                    <div class="window-icon window-minimize fa fa-window-minimize"></div>
+                    <div class="window-icon window-max-restore fa fa-window-restore"></div>
+                    <div class="window-icon window-close fa fa-window-close"></div>
+                </div>
             </div>
             <!-- 主视图 -->
             <div class="split-view aproch-main-view">
